client/styles/sass/style.scss
@import 'components/countdown';
@import 'components/links';
@import 'components/requests_count';
@import 'components/typo';
@import 'lib/material-icons';
@import 'partials/hints';

body {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.container.centered {
  margin: 0 auto;
}

.campaigns-edit-modal {
  width: 800px;
}

.campaign-description {
  height: 100px !important;
}

.no-margin-bottom {
  margin-bottom: 0px !important;
}

.main-title {
  padding-left: 20px;
  margin-top: 15px;
  margin-bottom: 0px;
}

.md-title-container {
  margin-bottom: 0px !important;
}

.campaign-tags {
  .md-chips {
    box-shadow: none !important;
  }
}

.md-fab {
  position: fixed !important;
}

.wrap {
  overflow: hidden;
}

.without-margin {
  margin: 0px !important;
}

.campaign-checkbox {
  margin-bottom: 8px;
  margin-top: 16px;
}

.layout-container {
  height: 100vh;
  max-height: 100vh;
  width: 100vw;
  overflow: hidden;
}

ui-view, .full-size {
  display: block;
  height: 100%;
  width: 100%;
  max-height: 100%;
  max-width: 100%;
}

.scrollable {
  overflow-x: hidden;
  overflow-y: auto;
}

ui-view, .full-size {
  display: block;
  height: 100%;
  width: 100%;
  &.flex-view {
    display: flex !important;
  }
}

body > ui-view {
  overflow-y: auto;
}

.md-chatroom-header {
  padding: 7px;
}

.md-chatroom-content {
  padding: 10px;
  overflow-y: auto;
}

.md-chatroom-form {
  padding: 0px 10px;
  margin-top: 15px !important;
}

.message-wrapper {
  overflow: hidden;
  
  .message-container {
    padding: 10px;
    border-radius: 20px;
    margin-bottom: 5px;
    width: 90%;
    box-sizing: border-box;
    &:first-of-type {
      margin-top: 5px;
    }
    &.self {
      border-bottom-left-radius: 0px;
    }
    &.other {
      float: right;
      border-bottom-right-radius: 0px;
    }
    &.command {
      width: 100%;
    }
    .message-creation-date {
      display: none;
    }
    &:hover {
      .message-creation-date {
        display: initial;
      }
    }
  }
}

md-sidenav.sidenav-chatroom {
  min-width: 600px;
}

.main-content-container {
  overflow: hidden;
  max-height: calc(100% - 64px);
  height: calc(100% - 64px);
}

.playground {
  padding: 10px;
}

.hidden {
  display: none !important;
}

.uploader-wrapper {
  .uploader-filename-wrapper {
    line-height: 48px;
  }
}

.file-upload-modal {
  min-width: 500px;
  max-width: 500px;
  width: 500px;
}

.panel-selection-input {
  margin: 5px !important;
}

ui-view:not(.custom-ui-view) {
  height: 100%;
  width: 100%;
}

